IF (BUILD_WITH_MULTIBOOST)
 ADD_SUBDIRECTORY(MultiBoost)
ENDIF (BUILD_WITH_MULTIBOOST)

IF (BUILD_WITH_OPENCVPERFORMANCE)
  INCLUDE_DIRECTORIES(${OPENCVPERFORMANCE_INCLUDE})
  ADD_SUBDIRECTORY(OpenCVPerformance)
ENDIF (BUILD_WITH_OPENCVPERFORMANCE)

IF (BUILD_WITH_BOW)
  ADD_SUBDIRECTORY(bow)
ENDIF (BUILD_WITH_BOW)

IF (BUILD_WITH_WIREDIAGRAM)
 ADD_SUBDIRECTORY(WireDiagram)
ENDIF (BUILD_WITH_WIREDIAGRAM)

IF (BUILD_WITH_SBD)
  ADD_SUBDIRECTORY(SBD)
ENDIF (BUILD_WITH_SBD)

IF (BUILD_WITH_VIDEOVALIDATORFOROPENCV)
  ADD_SUBDIRECTORY(VideoValidatorForOpenCV)
ENDIF (BUILD_WITH_VIDEOVALIDATORFOROPENCV)

