IF (BUILD_WITH_OPENCVPERFORMANCE)
  INCLUDE_DIRECTORIES(${OPENCVPERFORMANCE_INCLUDE})
  ADD_SUBDIRECTORY(opencv_cascade)
ENDIF (BUILD_WITH_OPENCVPERFORMANCE)

IF (BUILD_WITH_BOW)
  ADD_SUBDIRECTORY(bow)
ENDIF (BUILD_WITH_BOW)

IF (BUILD_WITH_RSI)
  ADD_SUBDIRECTORY(rsitest)
ENDIF (BUILD_WITH_RSI)

IF (BUILD_WITH_CAFFE)
  ADD_SUBDIRECTORY(caffe)
ENDIF (BUILD_WITH_CAFFE)

FILE (GLOB EXTRA_USERCMAKE_FILES "${CMAKE_CURRENT_SOURCE}" "UserCMakeLists*.txt")
FOREACH( MYNEXT ${EXTRA_USERCMAKE_FILES})
    INCLUDE (${MYNEXT} )
ENDFOREACH()
